test2-2023-08-25.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.3038 seconds

  ----Wall Time----  ----Name----
    1.2808 ( 98.2%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    1.2123 ( 93.0%)    Parse modules
    0.0230 (  1.8%)  Rest
    1.3038 (100.0%)  Total

{
  totalTime: 1.322,
  maxMemory: 169476096
}
